# working-rag

./: .env  README.md  app.py  index.html  local_llama_embedding.py  pyproject.toml  rag_pipeline.py  requirements.txt
