[project]
name = "rag-pipeline"
version = "0.1.0"
description = "RAG Pipeline implementation"
requires-python = ">=3.12.5"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.poetry.dependencies]
python = ">=3.12.5"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0"
] 